Fixed shuffling by page (#175)
* fixed projects icon on shared list

* modified /api/projects/ endpoint to include shuffle requests, refactored ProjectsPageHeader.tsx to handle shuffling from frontend, refactored AllProjects.tsx to set shuffledProjects, fixed issue #154

* added comments to AllProjects.tsx

* Truncated list and projects page (#173)

* truncated list and projects for long titles & descriptions

* add back styles

* Add borders to ballot page to match project page

* modified /api/projects/ endpoint to include shuffle requests, refactored ProjectsPageHeader.tsx to handle shuffling from frontend, refactored AllProjects.tsx to set shuffledProjects, fixed issue #154

* tweaked filter to filter all projects instead of current page, fixed categories selection toggle on/off in ProjectsPagesHeader.tsx, implemented selected category reset on shuffle or page change

---------

--- a/packages/nextjs/styles/globals.css
+++ b/packages/nextjs/styles/globals.css
@@ -132,7 +132,7 @@ input[type="number"] {
     max-width: 99%;
 }
 
-project__card-container_btn {
+.project__card-container_btn {
     display: flex;
     justify-content: space-between;
     align-items: center;
